# Predictive-HR-Analytics

./: .pylintrc  Makefile  README.md  isort.cfg  mypy.ini  pyproject.toml  requirements.txt
data/: HR_dataset.xlsx
notebook/: base.ipynb
