[tool.poetry]
name = "Predictive-HR-Analytics"
description = "Machine Learning based Forecasting for People Analytics"
author = ["cjssoote@gmail.com", "hhappee3@gmail.com"]

[tool.poetry.dependencies]
black = ">=19.3b0,<=22.12"
isort = ">=5.7"
mypy = ">=0.910"
pre-commit = ">=2.13"
pylint = ">=2.9"
python = ">=3.10"

[tool.black]
line-length = 120
target-version = ['py310']
